--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "01-module.js",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "cpu-stat": "^2.0.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "iconv-lite": "^0.4.24",
+    "request": "^2.88.0",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {},
   "scripts": {
