--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cpu-stat": "^2.0.1",
     "express": "^4.17.1",
     "iconv-lite": "^0.4.24",
+    "mysql": "^2.17.1",
     "request": "^2.88.0",
     "socket.io": "^2.2.0"
   },
