--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.17.1",
     "iconv-lite": "^0.4.24",
     "mysql": "^2.17.1",
+    "mysql2": "^1.6.5",
     "request": "^2.88.0",
     "socket.io": "^2.2.0"
   },
