--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "request": "^2.88.0",
+    "sequelize": "^5.8.12",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {},
